--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,21 @@
 buildscript {
     repositories {
+        maven {
+            url "https://repo1.maven.org/maven2"
+            jcenter()
+        }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
         mavenCentral()
+        jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        // classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.4.2'
     }
 }
 
@@ -17,13 +28,23 @@ version          = version_number
 group            = group_info
 
 repositories {
+    maven {
+        url "https://repo1.maven.org/maven2"
+        jcenter()
+    }
+    maven {
+        url 'https://maven.google.com/'
+        name 'Google'
+    }
+    jcenter()
+    google()
     mavenCentral()
     mavenLocal()
 }
 
 dependencies {
-    compile "org.whispersystems:signal-protocol-android:${signal_version}"
-    compile (project(':java')) {
+    implementation "org.whispersystems:signal-protocol-android:${signal_version}"
+    implementation (project(':service:java')) {
         exclude group: 'org.whispersystems', module: 'signal-protocol-java'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
@@ -31,13 +52,21 @@ dependencies {
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    // buildToolsVersion '25.0.2'
+    buildToolsVersion '28.0.3'
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+    defaultConfig {
+        minSdkVersion 9
     }
 
+    compileOptions {
+        // sourceCompatibility JavaVersion.VERSION_1_7
+        // targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    /*
     libraryVariants.all { variant ->
         variant.outputs.each { output ->
             def outputFile = output.outputFile
@@ -47,6 +76,7 @@ android {
             }
         }
     }
+    */
 
 }
 
